src/objects/ECO_ProjectReviewRegionTriggerOverride__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>OverrideValue1__c</fullName>
        <label>Override Value 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverrideValue2__c</fullName>
        <label>Override Value 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectRegion__c</fullName>
        <label>Project Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TriggerName__c</fullName>
        <label>Trigger Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ECO_ProjectReviewRegionTriggerOverride</label>
</CustomObject>